--- a/GroupIntro.ipynb
+++ b/GroupIntro.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "GroupIntro.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM02dPjA0mlN/LY8laolVss",
+      "authorship_tag": "ABX9TyOJC00hEUSIbpotiDWk9Qww",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,10 +45,26 @@
       },
       "source": [
         "Nhóm 19:\n",
-        " + Trần Cảnh Vinh\n",
-        " + Vũ Thị Hường\n",
-        " + Phạm Tri Thức\n",
-        " "
+        "Thành Viên nhóm:\n",
+        "Trần Cảnh Vinh\n",
+        "Phạm Tri Thức\n",
+        "Vũ Thị Hường\n",
+        "\n",
+        "Ý tưởng: Nhận diện các loại thuốc trên hình ảnh một toa thuốc. Nếu không tồn tại loại thuốc trong kho thì đề xuất các loại thuốc tương ứng có cùng thành phần, hàm lượng\n",
+        "1. Mô tả:\n",
+        "Input: Ảnh chụp một toa thuốc \n",
+        "Output: + Danh sách các loại thuốc có trong toa thuốc\n",
+        "+ Nếu trong kho không có loại thuốc trong danh sách  thì gợi ý các thuốc có thể thay thế dựa trên thành phần và hàm lượng thuốc tương tự.\n",
+        "2. Công cụ: smartphone, Python, Postgresql, Keras, NLTK\n",
+        "3. Nội dung thực hiện:\n",
+        "Thu thập một DataSet mẫu chứa các hình ảnh toa thuốc lấy từ thực tế của các bệnh nhân.\n",
+        "Sử dụng thư viện python để nhận dạng hình ảnh và tách lấy ra các thông tin có trong toa thuốc.\n",
+        "Tiến hành nhận dạng để phân biệt xem thông tin nào là tên thuốc, thông tin nào là liều dùng, thông tin nào là thời gian uống trong ngày,....\n",
+        "Training dữ liệu đã được nhận dạng và cải thiện độ chính xác của Model sao cho kết quả trả về phân biệt rõ được các thông tin trong toa thuốc như tên thuốc, số lượng thuốc, liều dùng, thời gian uống, độ chính xác của kết quả.\n",
+        "Nếu thuốc được nhận diện không có thì gọi xuống database để lấy ra những thuốc trong hệ thống có hàm lượng và thành phần tương tự với để thay thế và đánh dấu thuốc này là thuốc thay thế cho loại thuốc không tìm được.\n",
+        "Sắp xếp kết quả trả về dựa trên độ chính xác của thuốc đã được nhận dạng.\n",
+        "Test dữ liệu đã được training bằng cách chụp một tấm hình từ smartphone, truyền xuống database bằng API và trả về kết quả là các thuốc có trong toa thuốc. \n",
+        "4. Phân công:"
       ]
     }
   ]
